# Anyrun-Weather

./: Cargo.toml  README.md
locales/: en.yml  zh-CN.yml
src/: lib.rs  weather.rs
