[package]
name = "anyrun-weather"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
nonempty = { version = "0.10", features = ["serialize"] }
